pdk/1.0/modules/ROOT/pages/policies-pdk-policy-templates.adoc
= Custom Policy Examples
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

Flex Gateway Policy Development Kit (PDK) provides example policy projects to get started configuring your Rust source code.

Find all policy examples and their documentation in the https://github.com/mulesoft/pdk-custom-policy-examples[PDK Custom Policy GitHub Repository^].

PDK offers the following example policies:

* https://github.com/mulesoft/pdk-custom-policy-examples/tree/{template-policies-url-ver-var}/certs/README.md[Certification Policy Example^]: Use the Certification Policy as an example of how to obtain data concerning connection certificates.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/crypto/README.md[Crypto Policy Example^]: Use the Crypto Policy as an example of how to use xref:policies-pdk-configure-features-libraries.adoc[third-party libraries] that provide cryptography capabilities in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/tree/{template-policies-url-ver-var}/data-caching/README.md[Data Caching Policy Example^]: Use the Data Caching Policy as an example of how to implement xref:policies-pdk-configure-features-caching.adoc[data caching] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/jwt-validation/README.md[JWT Validation Policy Example^]: Use the JWT Validation Policy as an example of how to use functions of the xref:policies-pdk-configure-features-jwt.adoc[JWT Library] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/simple-oauth-2-validation/README.md[Simple OAuth 2.0 Validation Policy Example^]: Use the Simple OAuth 2.0 Validation Policy as an example of how to implement xref:policies-pdk-configure-features-http-request.adoc[HTTP calls] in your custom policy.
* https://github.com/mulesoft/pdk-custom-policy-examples/blob/{template-policies-url-ver-var}/query/README.md[Query Policy Example^]: Use the Query Policy as an example of how to handle xref:policies-pdk-configure-features-dataweave.adoc[DataWeave expressions] in your custom policy.


== Set Up an Example Policy Project

To begin using an example policy project:

. Ensure you have installed all the xref:policies-pdk-prerequisites.adoc[PDK prerequisites].
. Clone the https://github.com/mulesoft/pdk-custom-policy-examples[PDK Custom Policy GitHub Repository^] with the following command or your preferred GitHub interface:
+
[source,ssh]
----
git clone https://github.com/mulesoft/pdk-custom-policy-examples.git
----

. Navigate to the newly cloned directory, then copy and paste the directory of your desired policy into a new location.
. In the `cargo.toml` file of the copied policy example, replace the `group-id` with your group ID, for example:
+
[source,toml]
----
group_id = "<your-group-id>"
----

. Run the `make setup` command.
+
[source,ssh]
----
make setup
----

. Navigate to the `README.md` file in the example policy to read more about the policy and how to test it.


== See Also

* xref:policies-pdk-configure-features.adoc[]